@@ -27,10 +27,7 @@ Source code is available
 	  http://lilypond.org/download/
 	</a>
       <li>
-	<a href="http://www.lilypond.org/ftp/">
-	  http://www.lilypond.org/ftp/</a>
-      <li>
-	<a href="ftp://sca.uwaterloo.ca/pub/">ftp://sca.uwaterloo.ca/pub/</a>
+	<a href="ftp://sca.uwaterloo.ca/pub/">tp://sca.uwaterloo.ca/pub/</a>
     </ul>
 
     <a href="http://savannah.gnu.org/">
