@@ -12,15 +12,16 @@
 Conferences pertaining to music notation
 <ul>
 <li>
+<a href="http://en.wikipedia.org/wiki/ICMC">
 International Computer Music conference
-(<a href="http://www.icmc2003.org">2003</a>)
+</a>
 <li>
-
+<a href="http://jim2005.mshparisnord.net/">
 Journees Informatique Musicale
-<a href="http://www.icmc2003.org">2003</a>
+</a>
+
 <li>
-Colloquium su Informaticha Musicale  (?)
-(<a href="http://www.xivcim.org">2003</a>)
+Colloquium su Informaticha Musicale
 
 <li>
 
