@@ -32,11 +32,11 @@
     <td>
       <strong>
 	_("Download <a href='%s'>%s</a>",
-	"http://lilypond.org/download/binaries/Fedora-4/lilypond-2.6.3-1.i386.rpm",
+	"../../download/binaries/Fedora-4/lilypond-2.6.3-1.i386.rpm",
 	"LilyPond"),
-	<a href="http://lilypond.org/download/binaries/Fedora-4/lilypond-documentation-2.6.3-1.i386.rpm">_("documentation")</a>,
-	<a href="http://lilypond.org/download/binaries/Fedora-3/ghostscript-8.15rc3-0.i386.rpm">Ghostscript</a>,
-	<a href="http://lilypond.org/download/binaries/Fedora-3/ghostscript-libs-7.07-41.i386.rpm">_("compatibility libraries")</a>
+	<a href="../../download/binaries/Fedora-4/lilypond-documentation-2.6.3-1.i386.rpm">_("documentation")</a>,
+	<a href="../../download/binaries/Fedora-3/ghostscript-8.15rc3-0.i386.rpm">Ghostscript</a>,
+	<a href="../../download/binaries/Fedora-3/ghostscript-libs-7.07-41.i386.rpm">_("compatibility libraries")</a>
       </strong>
     </td>
     <td>2.6.3</td>
@@ -73,8 +73,8 @@
     <td>
       <strong>
 	_("<a href='%s'>Install</a> or <a href='%s'>upgrade</a>",
-	"http://lilypond.org/download/binaries/autopackage/lilypond-2.6.3.x86.package",
-	"http://lilypond.org/download/binaries/autopackage/lilypond-2.6.3-upgrade.x86.package")
+	"../../download/binaries/autopackage/lilypond-2.6.3.x86.package",
+	"../../download/binaries/autopackage/lilypond-2.6.3-upgrade.x86.package")
       </strong>
     </td>
     <td>2.6.3</td>
