@@ -1,3 +1,11 @@
+2005-08-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/install/stable.ihtml: make URLs relative. 
+
+2005-08-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/devel/misc/conferences.html: clean links.
+
 2005-08-16  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
 
 	* fr/: update download link to 2.7.4
